--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=CRUD de Produtos Back
+spring.application.name=CRUD de Produtos Back-End
 server.port=8000
 
 spring.datasource.url=jdbc:postgresql://crud-postgres:5432/postgres?conn_max_age=0
