--- a/spring/src/test/resources/application.properties
+++ b/spring/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=CRUD de Produtos Back
+spring.application.name=CRUD de Produtos Back-End
 server.port=8000
 
 spring.datasource.url=jdbc:h2:mem:testdb
