--- a/vue/package.json
+++ b/vue/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.6",
+    "element-plus": "^2.1.9",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
